# kiosk_3d_test_own

./: .gitignore  BUILD.md  CLAUDE-AGENTS-SETUP.md  CLAUDE.md  MOBILE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/agents/: planner.md  pwa-auditor.md
.github/workflows/: deploy.yml
.playwright-mcp/: page-2026-04-22T13-28-11-492Z.yml
scripts/: convert-splat-ply.py  fetch-vendor.mjs  tunnel.mjs
src/: KioskConfig.json  config.json  index.html  manifest.webmanifest  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/assets/: Image to Point Cloud.json
