[package]
name        = "fishtank-vr"
version     = "0.1.0"
description = "Head-tracked 3D kiosk"
authors     = ["Aslam"]
edition     = "2021"

# The bin exe is named after this crate.
[[bin]]
name = "fishtank-vr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri   = { version = "2.1", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Used by `tauri` for devtools, etc.
custom-protocol = ["tauri/custom-protocol"]

# Release profile: favour size + speed over compile time.
[profile.release]
panic     = "abort"
codegen-units = 1
lto       = true
incremental = false
opt-level = "s"
strip     = true
